Git does so perplex me (still learning how it doesn't behave like mercurial)

--- a/molten/core/templates/projects.html
+++ b/molten/core/templates/projects.html
@@ -38,7 +38,7 @@
       </p>
       <a href="http://fixanddamn.blogspot.ca/">Strength Training</a>
       <p class="project-desc">
-        Mostly a training journal with some entries of things I've learned or interesting things I've talked about with my friend in the academia of nutritional sciences.
+        Mostly a training journal with some entries of lessons and observations.
       </p>
     </li>
   </ul>
