--- a/molten/core/templates/base.html
+++ b/molten/core/templates/base.html
@@ -7,6 +7,8 @@
         {% block metadata %}
         {% endblock metadata %}
 
+        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" >
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
         {% block extralinks %}
