Just took out the Helvetica Ultra Light font since it was looking ugly on certain browsers

--- a/molten/core/templates/projects.html
+++ b/molten/core/templates/projects.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="middle-content projects-page">
-  <h2 class="helv-light-ultra">Work Projects</h2>
+  <h3>Work Projects</h3>
   <ul>
   	<li>
       <div><a href="http://www.sensorsuite.com">SensorSuite</a></div>
@@ -17,7 +17,7 @@
       </p>
     </li>
   </ul>
-  <h2 class="helv-light-ultra">Personal Projects</h2>
+  <h3>Personal Projects</h3>
   <ul>
   	<li>
       <a href="https://github.com/TempestMia/wsmmo">Websocket MMO</a>
@@ -29,7 +29,7 @@
   <p class="project-disc">
   	Disclaimer: I only recently came around to thinking maybe I should make my personal projects presentable to others, put them on GitHub as proof that yes, I do code. I'm just starting off with the websocket mmo, hopefully whenever you, dear reader, take a gander, it'll be somewhat complete (as I'm writing this, it needs a lot more work).
   </p>
-  <h2 class="helv-light-ultra">Non-Programming Projects</h2>
+  <h3>Non-Programming Projects</h3>
   <ul>
     <li>
       <a href="https://soundcloud.com/tempestmia">SoundCloud</a>
