--- a/molten/core/templates/about.html
+++ b/molten/core/templates/about.html
@@ -4,7 +4,7 @@
 <div class="middle-content about-page">
 	<div class="avatar-img"><img class="avatar js-avatar" width="230" height="230" src="https://0.gravatar.com/avatar/fdbbce5c6df20572033432172ad02f1e?d=https%3A%2F%2Fidenticons.github.com%2F5220dc71f5ba5aee246be0224806e8e1.png&r=x&s=460" data-user="5964645"></div>
 
-  	<h2 class="helv-light-ultra">Computer Science educated, programmer by trade, heavy lifting enthusiast.</h2>
+  	<h3>Computer Science educated, programmer by trade, heavy lifting enthusiast.</h3>
 
   	<p class="about-2">I started off coding Java for an ERP-visualization company called <a href="http://www.nakisa.com">Nakisa</a>.</p>
 
