Changed a bit of text

--- a/molten/core/templates/projects.html
+++ b/molten/core/templates/projects.html
@@ -7,7 +7,7 @@
   	<li>
       <div><a href="http://www.sensorsuite.com">SensorSuite</a></div>
       <p class="project-desc">
-        A start-up in Toronto that provides buildings with a mesh network of sensors. The web portion allows building managers to monitor their data. I worked in Django on the web portion of things.
+        A start-up in Toronto that provides buildings with a mesh network of sensors. The portion I worked on was the web application which allows building managers to monitor the data of their installed sensors. 
       </p>
     </li>
     <li>
