--- a/molten/core/templates/base.html
+++ b/molten/core/templates/base.html
@@ -3,6 +3,8 @@
     <head><title>Mia Zbikowski - {% if pagetitle %} {{ pagetitle }}{% endif %}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="Content-Language" content="en"/>
+        <meta name="keywords" content="mia zbikowski, python, programmer, developer, django">
+        <meta name="description" content="Mia Zbikowski's personal page">
         
         {% block metadata %}
         {% endblock metadata %}
